clusters/takeout/apps/http/ingress-motioneye.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motioneye
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: motioneye-credentials
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - hosts:
        - "motioneye.qtosw.com"
      secretName: letsencrypt-motioneye
  rules:
  - host: motioneye.qtosw.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: motioneye
            port:
              number: 80
